<resources>
    <string name="app_name">Final Project</string>
    <string name="blackjack">BLACKJACK</string>
    <string name="stay">STAY</string>
    <string name="hit">HIT</string>
    <string name="play">PLAY</string>
    <string name="you_won">YOU WON</string>
    <string name="you_lost">YOU LOST</string>
    <string name="stayed">STAYED</string>
    <string name="busted">BUSTED</string>
    <string name="tie_game">PUSH</string>
    //filler is just there for visual purposes while designing
    <string name="filler_winner">WINNER</string>
    <string name="filler_outcome">RESULT</string>
    <string name="filler_points">PTS</string>
    <string name="house">HOUSE</string>
    <string name="you">YOU</string>
    <string name="filler_money">+ $1000</string>
    <string name="home">HOME</string>
    <string name="credit">CREDITS</string>
    <string name="back">BACK</string>
    <string name="click">click</string>
    <string name="get_money">If you had to come here, you have failed. \nClick below for a random amount of money</string>
    <string name="title_activity_bet">BetActivity</string>
    <string name="bet">BET</string>
    <string name="error_toomuch">You do not have enough money</string>
    <string name="error_toolittle">You have to bet to play</string>
    <string name="hint">Put your bet here</string>
    <string name="error_notanumber">Please enter an integer</string>
    <string name="money_sign">$</string>
    <string name="click_me">click me</string>
    <string name="more_money">Get More Money</string>
    <string name="earned_question">Money Earned:???</string>
    <string name="error_nothingthere">You have to enter a value</string>
</resources>
