<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bishopireton.finalproject.EndingActivity">

    <TextView
        android:id="@+id/house_outcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="198dp"
        android:layout_marginLeft="186dp"
        android:layout_marginRight="8dp"
        android:text="@string/filler_outcome"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/house_sign"
        app:layout_constraintVertical_bias="0.869" />

    <TextView
        android:id="@+id/winner_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/filler_winner"
        android:textColor="@android:color/background_light"
        android:textSize="@android:dimen/notification_large_icon_width"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/you_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/you"
        android:textColor="@android:color/holo_red_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/house_sign"
        app:layout_constraintTop_toBottomOf="@+id/winner_sign"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/house_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="57dp"
        android:layout_marginTop="24dp"
        android:text="@string/house"
        android:textColor="@android:color/holo_red_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner_sign"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/your_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/filler_points"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.415"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.195" />

    <TextView
        android:id="@+id/house_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:text="@string/filler_points"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/house_sign"
        app:layout_constraintVertical_bias="0.529"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.735" />

    <TextView
        android:id="@+id/your_outcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="198dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/filler_outcome"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/house_outcome"
        app:layout_constraintTop_toBottomOf="@+id/you_sign"
        app:layout_constraintVertical_bias="0.869" />

    <TextView
        android:id="@+id/money_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:autoText="false"
        android:text="@string/filler_money"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="@android:dimen/notification_large_icon_height"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner_sign"
        app:layout_constraintVertical_bias="0.675" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="173dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:onClick="onHome"
        android:text="@string/home"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner_sign"
        app:layout_constraintVertical_bias="0.925" />

</android.support.constraint.ConstraintLayout>
